--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,9 +26,9 @@
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="292dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="60dp"
         android:hint="@string/user_email_prompt"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -36,11 +36,11 @@
         android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/imageView8" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="292dp"
+        android:layout_width="200dp"
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
         android:hint="@string/prompt_pass"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="-20dp"
         android:layout_marginBottom="64dp"
         android:enabled="false"
         android:text="@string/action_login"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="-40dp"
         android:layout_marginBottom="64dp"
         android:enabled="true"
         android:text="@string/action_signin"
