--- a/app/src/main/res/layout/fragment_first2.xml
+++ b/app/src/main/res/layout/fragment_first2.xml
@@ -57,9 +57,9 @@
 
     <EditText
         android:id="@+id/signInUsername"
-        android:layout_width="300dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="90dp"
         android:layout_marginBottom="15dp"
         android:hint="@string/prompt_user"
         android:inputType="textPersonName"
@@ -74,9 +74,8 @@
 
     <EditText
         android:id="@+id/signInPassword"
-        android:layout_width="300dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="288dp"
         android:hint="@string/prompt_pass"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
@@ -85,13 +84,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="300dp" />
 
     <EditText
         android:id="@+id/signInEmail"
-        android:layout_width="300dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="27dp"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
@@ -102,14 +101,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/warningUsername" />
 
     <Button
         android:id="@+id/button_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="100dp"
         android:enabled="true"
         android:text="@string/action_signin"
