--- a/app/src/main/res/layout/fragment_first2.xml
+++ b/app/src/main/res/layout/fragment_first2.xml
@@ -76,6 +76,7 @@
         android:id="@+id/signInPassword"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         android:hint="@string/prompt_pass"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
@@ -84,7 +85,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="300dp" />
+        app:layout_constraintTop_toBottomOf="@+id/warningEmail" />
 
     <EditText
         android:id="@+id/signInEmail"
